created and updated policy

--- a/organisms/lp-policy.html
+++ b/organisms/lp-policy.html
@@ -62,6 +62,99 @@
                     <div class="wu-lppolicy__item"><p>iii. To other PROMOTER entities for the purpose of responding to questions, concerns, comments or feedback on our products or services or our business, or to share knowledge on issues such as industry developments, PROMOTER's business, market outlook, corporate events and other products and services of PROMOTER that may be of interest to your company, organisation or business.</p></div>
                     <div class="wu-lppolicy__item"><p>iv. To other PROMOTER entities to facilitate the provision of products and services to our customers where the project or engagement involves other PROMOTER entities.</p></div>
                     <div class="wu-lppolicy__item"><p>v. To event organisers and service providers to facilitate the planning of events / functions that PROMOTER organises or is involved in.</p></div>
+                    <div class="wu-lppolicy__item"><p>We might transfer, store, process and/or deal with your personal data outside Singapore. If we do so, we will comply with the applicable data protection and privacy laws.</p></div>
+                    <div class="wu-lppolicy__item"><p>We also disclose and transfer Personal Data to the following parties for the purposes of managing, operating, administering and running our business and for our business and legal purposes:</p></div>
+                    <div class="wu-lppolicy__item"><p>i. To group companies for security purposes</p></div>
+                    <div class="wu-lppolicy__item"><p>ii. To group companies for purposes of evaluating our products and services and our business as a group</p></div>
+                    <div class="wu-lppolicy__item"><p>iii. Financial institutions for purposes of payments and transactions related to PROMOTER's provision of products and services or related to products and services provided to PROMOTER by our vendors / service providers / consultants</p></div>
+                    <div class="wu-lppolicy__item"><p>iv. To our service providers (who may be located outside Singapore) that have been retained to perform services on our behalf or on behalf of group companies, including:</p></div>
+                    <div class="wu-lppolicy__item"><p>a. Service providers who provide IT and outsourcing services such as data storage, electronic mail services, deployment of management operations for information technology,</p></div>
+                    <div class="wu-lppolicy__item"><p>b. Professional, financial and legal advisors, tax advisors, auditors,</p></div>
+                    <div class="wu-lppolicy__item"><p>c. Vendors, service providers and consultants that have been engaged to help manage, operate, administer and run PROMOTER's operations and business process or provide services to facilitate our provision of our products and services, and</p></div>
+                    <div class="wu-lppolicy__item"><p>d. External contractors that provide consultancy and evaluative services to PROMOTER and for PROMOTER's products and services, or organise events for PROMOTER.</p></div>
+                    <div class="wu-lppolicy__item"><p>In addition, we would disclose Personal Data in the following circumstances:</p></div>
+                    <div class="wu-lppolicy__item"><p>i. we are required to do so by law,</p></div>
+                    <div class="wu-lppolicy__item"><p>ii. in response to a request from law enforcement authorities or other government officials,</p></div>
+                    <div class="wu-lppolicy__item"><p>iii. to comply with a court order or direction from a government agency or regulatory authority ordering the disclosure of the Personal Data; and</p></div>
+                    <div class="wu-lppolicy__item"><p>iv. where the disclosure is necessary for investigations or legal proceedings.</p></div>
+                    <!-- sec-4 -->
+                    <h5 class="wu-lppolicy__head">4. Cookies & Internet Technologies</h5>
+                    <div class="wu-lppolicy__item"><p>Websites and other online and mobile applications [“app(s)”] that we might own or maintain might place small text files, called cookies, on your computer or mobile device when you visit a website or use an app.</p></div>
+                    <div class="wu-lppolicy__item"><p>Cookies gather data like Internet Protocol (IP) addresses and other information related to your visit or use of our website or app(s).</p></div>
+                    <div class="wu-lppolicy__item"><p>We use the cookies and other technologies to facilitate and improve your interaction with our systems and to track the effectiveness of our websites and apps. We might also make use of pixel tags or web beacons, which are invisible tags placed on webpages but not on your computer. Pixel tags are usually used in conjunction with cookies and are used to monitor the behaviour of users visiting the website.</p></div>
+                    <div class="wu-lppolicy__item"><p>You may set up your web browser to block cookies, which will, in turn, disable the pixel tags from monitoring your website visit. You may also remove cookies stored from your computer or mobile device. However, if you do block cookies and pixel tags, you may not be able to use certain features and functions of our websites.</p></div>
+                    <div class="wu-lppolicy__item"><p>Our wees might also contain links to other websites not maintained by PROMOTER. This privacy policy applies only to PROMOTER's websites. When visiting others' websites, you should read their privacy policies regarding your use of their websites.</p></div>
+                    <!-- sec-5 -->
+                    <h5 class="wu-lppolicy__head">5. Protection of Personal Data</h5>
+                    <div class="wu-lppolicy__item"><p>With reference to Personal Data, we have safeguards to protect against accidental or unauthorised access, collection, use, disclosure, copying, sharing, disposal, deletion, modification and other similar risks.</p></div>
+                    <!-- sec-6 -->
+                    <h5 class="wu-lppolicy__head">6. Retention of Personal Data</h5>
+                    <div class="wu-lppolicy__item"><p>PROMOTER retains Personal Data only for as long as the retention is required for the purposes for which we collected the Personal Data, the purposes described in this Policy and for our business and legal purposes. Generally, we do not retain Personal Data for a period longer than 7 years after the original purposes for which the Personal Data was collected have ceased to be applicable, unless otherwise required by law or other mandatory directions by court or government authorities or for purposes of legal proceedings or other similar proceedings or investigations.</p></div>
+                    <!-- sec-7 -->
+                    <h5 class="wu-lppolicy__head">7. How to Contact Us</h5>
+                    <div class="wu-lppolicy__item"><p>If you have any questions or comments about this Policy and our policies and practices on our collection, use, disclosure or retention of Personal Data, you may contact our Data Protection Officer.</p></div>
+                    <div class="wu-lppolicy__item blulnk"><p>Email address:&nbsp;&nbsp;&nbsp;<a href="mailto:dpo@stratagile.com">dpo@stratagile.com</a>.</p></div>
+                    <!-- sec-8 -->
+                    <h5 class="wu-lppolicy__head">8. Updating or Correcting your Personal Data</h5>
+                    <div class="wu-lppolicy__item"><p>PROMOTER takes reasonable measures to ensure that the Personal Data we collect about individuals is accurate and complete.  For this reason, if there is any change or update in Personal Data, we would like to know about these changes or updates.</p></div>
+                    <div class="wu-lppolicy__item"><p>If there is a change or an update in your Personal Data or if there is a need to correct any Personal Data of yours that we have, please write to us and provide us with the following details:</p></div>
+                    <!-- list -->
+                    <div class="wu-lppolicy__lista">
+                        <ul>
+                            <li class="wu-lppolicy__listaitm">Your name</li>
+                            <li class="wu-lppolicy__listaitm">An address to contact you</li>
+                            <li class="wu-lppolicy__listaitm">The nature of our relationship with you</li>
+                            <li class="wu-lppolicy__listaitm">The Personal Data to be changed, updated or corrected</li>
+                        </ul>
+                    </div>
+                    <div class="wu-lppolicy__item"><p>You may send your requests to our Data Protection Officer at the contact details listed in Section 7 above. We will endeavour to acknowledge the receipt of your request within seven working days after the date of receipt of your request.</p></div>
+                    <div class="wu-lppolicy__item"><p>As it is important to us that the Personal Data that we have about you is accurate and complete, it may be necessary for us to request for supporting documentation from you. We will contact you if we require supporting documentation from you.</p></div>
+                    <div class="wu-lppolicy__item"><p>There may be circumstances where we will not update or correct Personal Data, including:</p></div>
+                    <div class="wu-lppolicy__listb">
+                        <ul>
+                            <li class="wu-lppolicy__listbitm">1. The Personal Data is opinion data that is kept solely for an evaluative purpose; and</li>
+                            <li class="wu-lppolicy__listbitm">2. The Personal Data is in documents related to a prosecution if all proceedings relating to the prosecution have not been completed.</li>
+                        </ul>
+                    </div>
+                    <!-- sec-9 -->
+                    <h5 class="wu-lppolicy__head">9. Requests & Feedback on Personal Data</h5>
+                    <div class="wu-lppolicy__item"><p>You may request for information from PROMOTER on what Personal Data of yours we have and how we have used and shared your Personal Data during the last one year before the date of your request. To learn how you can request for information from PROMOTER, please see our <a href="https://www.stratagile.com/privacy-policy/#request" class="hyplnk" target="_blank">Request for Information Notice</a>.You may also choose to withdraw your consent to the PROMOTER's use, collection, sharing or processing of your Personal Data at any time. To learn how you can withdraw your consent, please see our <a href="https://www.stratagile.com/privacy-policy/#request" class="hyplnk" target="_blank">Withdrawal of Consent Notice</a>.</p></div>
+                    <div class="wu-lppolicy__item"><p>Please note that your withdrawal of your consent to our use of your Personal Data may affect our provision of products and services to you or our business dealings with you, depending on the nature of your relationship with us.</p></div>
+                    <div class="wu-lppolicy__item"><p>If you have any concerns, feedback or complaints about the use and/or sharing of your Personal Data, we are open to receiving your feedback or complaint. To learn how you may submit a complaint about our use and/or sharing of your Personal Data, please see our <a href="https://www.stratagile.com/privacy-policy/#request" class="hyplnk" target="_blank">Feedback and Complaint Notice</a>. </p></div>
+                    <!-- sec-10 -->
+                    <h5 class="wu-lppolicy__head">10. Updates to Policy</h5>
+                    <div class="wu-lppolicy__item"><p>We may change or update portions of this Policy at any time and without prior notice to you. Please review this Policy from time to time so you are aware of any changes or updates to the notice. The effective date of this Policy is provided at the end of this document.</p></div>
+                    <div class="wu-lppolicy__item"><p>If you do not agree with any of the changes or updates to the Policy, you have the option of withdrawing your consent to our collection, use, disclosure and processing of your Personal Data (please refer to Section 9 above).</p></div>
+                    <div class="wu-lppolicy__item"><p><span class="bld">Effective Date</span>: 01 November 2024</p></div>
+                    <div class="wu-lppolicy__linkhd"><a href="https://www.stratagile.com/privacy-policy/" target="_blank">REQUEST FOR INFORMATION NOTICE</a></div>
+                    <h5 class="wu-lppolicy__head">Submitting a Request for Information</h5>
+                    <div class="wu-lppolicy__item"><p>To submit a request for information on what Personal Data of yours the PROMOTER has and how PROMOTER has used and shared your Personal Data within the last one year before the date of your request, please complete the form and send it to our Data Protection Officer by e-mail to:</p></div>
+                    <div class="wu-lppolicy__item blulnk"><p>Email address:&nbsp;&nbsp;&nbsp;<a href="mailto:dpo@stratagile.com">dpo@stratagile.com</a>.</p></div>
+                    <div class="wu-lppolicy__item"><p>We will respond to your request for information within 30 days from the date of our receipt of your request.</p></div>
+                    <div class="wu-lppolicy__item"><p>Please note that there are some circumstances under which the PROMOTER will not accede to your request for information. These circumstances include:</p></div>
+                    <!-- list -->
+                    <div class="wu-lppolicy__listb">
+                        <ul>
+                            <li class="wu-lppolicy__listbitm">1. You have requested for opinion data that is kept solely for an evaluative purpose</li>
+                            <li class="wu-lppolicy__listbitm">2. You have requested for documents related to a prosecution when all proceedings relating to the prosecution have not been completed</li>
+                            <li class="wu-lppolicy__listbitm">3. You have requested for Personal Data which is subject to legal privilege</li>
+                            <li class="wu-lppolicy__listbitm">4. You have requested for Personal Data the disclosure of which would reveal confidential commercial information that could harm the competitive position of the PROMOTER</li>
+                            <li class="wu-lppolicy__listbitm">5. Your request relates to Personal Data that is collected, use or disclosed for the purposes of an investigation where the investigation and associated proceedings and appeals have not been completed</li>
+                            <li class="wu-lppolicy__listbitm">6. In PROMOTER's discretion:</li>
+                        </ul>
+                    </div>
+                    <div class="wu-lppolicy__item"><p>(a) your request would unreasonably interfere with the operations of PROMOTER because it is repetitious or systematic</p></div>
+                    <div class="wu-lppolicy__item"><p>(b) the burden or expense of responding to your request would be unreasonable to PROMOTER or disproportionate to your interests</p></div>
+                    <div class="wu-lppolicy__item"><p>(c) your request is for information that does not exist or cannot be found</p></div>
+                    <div class="wu-lppolicy__item"><p>(d) your request is for information that is trivial, or</p></div>
+                    <div class="wu-lppolicy__item"><p>(e) your request is otherwise frivolous or vexatious.</p></div>
+                    <div class="wu-lppolicy__item"><p>The full list of exceptions and circumstances is available in the Fifth Schedule of the Personal Data Protection Act 2012 (see the Legislation Division of the Attorney General's Chambers' website at Singapore Statutes Online https://sso.agc.gov.sg/).</p></div>
+                    <div class="wu-lppolicy__linkhd"><a href="https://www.stratagile.com/privacy-policy/" target="_blank">WITHDRAWAL OF CONSENT NOTICE</a></div>
+                    <div class="wu-lppolicy__item"><p>You go to the web app profile section and uncheck your permission to grant PROMOTER the right to your information.</p></div>
+                    <div class="wu-lppolicy__item"><p>If you need to write to PROMOTER for any reason whatsoever, you can write to</p></div>
+                    <div class="wu-lppolicy__item blulnk"><p>Email address:&nbsp;&nbsp;&nbsp;<a href="mailto:dpo@stratagile.com">dpo@stratagile.com</a>.</p></div>
+                    <div class="wu-lppolicy__item"><p>Once we receive your notice that you wish to withdraw consent, we will contact you within seven days to acknowledge receipt of your withdrawal notice and within 30 days to inform you of the likely consequences of your withdrawal of your consent to the PROMOTER using and sharing your Personal Data.</p></div>
+                    <div class="wu-lppolicy__item"><p>The PROMOTER will cease to use and share your Personal Data within 30 days after our acknowledgement of receipt of your withdrawal notice.</p></div>
                 </div>
             </div>
         </div>
