--- a/organisms/lp-detailspage.html
+++ b/organisms/lp-detailspage.html
@@ -19,7 +19,7 @@
 
     <div class="wu-detailspg">
         <div class="wu-detailspg__bg desk-visible hide-mobile-tablet" style="background-image: url('https://uat.th.qrme.cloud/customer/assets/images/signup-bg.png?version=20230330');"></div>
-      <div class="wu-detailspg__bg only-mobile-tablet" style="background-image: url('https://uat.th.qrme.cloud/customer/assets/images/signup-bg.png?version=20230330');"></div>
+      <div class="wu-detailspg__bg only-mobile-tablet" style="background-image: url('../assets/images/wu-detailspg_bg_minitab.png');"></div>
       <!-- content-wrapper -->
        <div class="content-wrapper">
         <div class="wu-detailspg__wrap">
