--- a/organisms/lp-policy.html
+++ b/organisms/lp-policy.html
@@ -148,7 +148,7 @@
                     <div class="wu-lppolicy__item"><p>(c) your request is for information that does not exist or cannot be found</p></div>
                     <div class="wu-lppolicy__item"><p>(d) your request is for information that is trivial, or</p></div>
                     <div class="wu-lppolicy__item"><p>(e) your request is otherwise frivolous or vexatious.</p></div>
-                    <div class="wu-lppolicy__item"><p>The full list of exceptions and circumstances is available in the Fifth Schedule of the Personal Data Protection Act 2012 (see the Legislation Division of the Attorney General's Chambers' website at Singapore Statutes Online https://sso.agc.gov.sg/).</p></div>
+                    <div class="wu-lppolicy__item blulnk"><p>The full list of exceptions and circumstances is available in the Fifth Schedule of the Personal Data Protection Act 2012 (see the Legislation Division of the Attorney General's Chambers' website at Singapore Statutes Online <a href="">https://sso.agc.gov.sg/</a>).</p></div>
                     <div class="wu-lppolicy__linkhd"><a href="https://www.stratagile.com/privacy-policy/" target="_blank">WITHDRAWAL OF CONSENT NOTICE</a></div>
                     <div class="wu-lppolicy__item"><p>You go to the web app profile section and uncheck your permission to grant PROMOTER the right to your information.</p></div>
                     <div class="wu-lppolicy__item"><p>If you need to write to PROMOTER for any reason whatsoever, you can write to</p></div>
