--- a/organisms/lp-policy-th.html
+++ b/organisms/lp-policy-th.html
@@ -19,7 +19,7 @@
      <div class="wu-lppolicy">
         <div class="content-wrapper">
             <div class="wu-lppolicy__container">
-                <h3 class="wu-title">Privacy Policy</h3>
+                <h3 class="wu-title">Patakaran sa Privacy</h3>
                 <div class="wu-lppolicy__policy">
                     <!-- 1 -->
                     <div class="wu-lppolicy__item"><p>Ang PROMOTER ng Promosyong ito ay ang Stratagile Pte Ltd (“PROMOTER”) na matatagpuan sa STRATAGILE PTE. LTD, 22 New Industrial Road, PRIMAX -#08-20/21, Singapore 536208. Ang PROMOTER ang namamahala sa promosyon na ito sa ngalan ng Western Union, at ang Western Union ay walang pananagutan sa anumang aspeto ng promosyon. Ang programa ay ganap na pinamamahalaan ng PROMOTER.</p></div>
