--- a/organisms/lp-policy_ph_th.html
+++ b/organisms/lp-policy_ph_th.html
@@ -193,34 +193,50 @@
                     </p></div>
                     <div class="wu-lppolicy__item"><p><span class="bld">Effective Date</span>: 01 November 2024</p></div>
                     <div class="wu-lppolicy__linkhd"><a href="https://www.stratagile.com/privacy-policy/" target="_blank">REQUEST FOR INFORMATION NOTICE</a></div>
-                    <h5 class="wu-lppolicy__head">Submitting a Request for Information</h5>
+                    <h5 class="wu-lppolicy__head">Pagpapasa ng Request para sa Impormasyon
+                    </h5>
                     <div class="wu-lppolicy__item"><p>To submit a request for information on what Personal Data of yours the PROMOTER has and how PROMOTER has used and shared your Personal Data within the last one year before the date of your request, please complete the form and send it to our Data Protection Officer by e-mail to:</p></div>
                     <div class="wu-lppolicy__item blulnk"><p>Email address:&nbsp;&nbsp;&nbsp;<a href="mailto:dpo@stratagile.com">dpo@stratagile.com</a>.</p></div>
-                    <div class="wu-lppolicy__item"><p>We will respond to your request for information within 30 days from the date of our receipt of your request.</p></div>
-                    <div class="wu-lppolicy__item"><p>Please note that there are some circumstances under which the PROMOTER will not accede to your request for information. These circumstances include:</p></div>
+                    <div class="wu-lppolicy__item"><p>Magbibigay kami ng sagot sa iyong request para sa impormasyon sa loob ng 30 araw mula sa petsa ng aming pagtanggap ng iyong request.
+                    </p></div>
+                    <div class="wu-lppolicy__item"><p>Pakitandaan na may ilang mga pagkakataon kung saan hindi maaring tugunan ng PROMOTER ang iyong request para sa impormasyon. Kasama sa mga pagkakataong ito angYou have requested for opinion data that is kept solely for an evaluative purpose
+                    </p></div>
                     <!-- list -->
                     <div class="wu-lppolicy__listb">
                         <ul>
-                            <li class="wu-lppolicy__listbitm">1. You have requested for opinion data that is kept solely for an evaluative purpose</li>
-                            <li class="wu-lppolicy__listbitm">2. You have requested for documents related to a prosecution when all proceedings relating to the prosecution have not been completed</li>
-                            <li class="wu-lppolicy__listbitm">3. You have requested for Personal Data which is subject to legal privilege</li>
-                            <li class="wu-lppolicy__listbitm">4. You have requested for Personal Data the disclosure of which would reveal confidential commercial information that could harm the competitive position of the PROMOTER</li>
-                            <li class="wu-lppolicy__listbitm">5. Your request relates to Personal Data that is collected, use or disclosed for the purposes of an investigation where the investigation and associated proceedings and appeals have not been completed</li>
-                            <li class="wu-lppolicy__listbitm">6. In PROMOTER's discretion:</li>
+                            <li class="wu-lppolicy__listbitm">1. Nagsumite ka ng request para sa mga dokumento na may kaugnayan sa isang kaso ng pag-uusig habang hindi pa natatapos ang lahat ng mga proseso kaugnay ng pag-uusig.
+                            </li>
+                            <li class="wu-lppolicy__listbitm">2. Nagsumite ka ng request para sa mga dokumento na may kinalaman sa isang kaso ng pag-uusig habang hindi pa natatapos ang lahat ng mga proseso kaugnay ng pag-uusig.
+                            </li>
+                            <li class="wu-lppolicy__listbitm">3. Nagsumite ka ng request para sa Personal Data na sakop ng legal na pribilehiyo."
+                            </li>
+                            <li class="wu-lppolicy__listbitm">4. Nagsumite ka ng request para sa Personal Data na kung ilalahad ay magbubukas ng kumpidensyal na impormasyon pang-komersyo na maaaring makasama sa posisyon ng PROMOTER sa kompetisyon.
+                            </li>
+                            <li class="wu-lppolicy__listbitm">5. Ang iyong request ay may kinalaman sa Personal Data na kinolekta, ginamit, o ibinunyag para sa layunin ng isang imbestigasyon kung saan hindi pa natatapos ang imbestigasyon at ang mga kaugnay na proseso at apela.
+                            </li>
+                            <li class="wu-lppolicy__listbitm">6. Sa pagpapasya ng Promoter:
+                            </li>
                         </ul>
                     </div>
-                    <div class="wu-lppolicy__item"><p>(a) your request would unreasonably interfere with the operations of PROMOTER because it is repetitious or systematic</p></div>
-                    <div class="wu-lppolicy__item"><p>(b) the burden or expense of responding to your request would be unreasonable to PROMOTER or disproportionate to your interests</p></div>
-                    <div class="wu-lppolicy__item"><p>(c) your request is for information that does not exist or cannot be found</p></div>
-                    <div class="wu-lppolicy__item"><p>(d) your request is for information that is trivial, or</p></div>
-                    <div class="wu-lppolicy__item"><p>(e) your request is otherwise frivolous or vexatious.</p></div>
-                    <div class="wu-lppolicy__item blulnk"><p>The full list of exceptions and circumstances is available in the Fifth Schedule of the Personal Data Protection Act 2012 (see the Legislation Division of the Attorney General's Chambers' website at Singapore Statutes Online <a href="">https://sso.agc.gov.sg/</a>).</p></div>
+                    <div class="wu-lppolicy__item"><p>(a) Ang iyong request ay hindi makatwiran na makikialam sa operasyon ng PROMOTER dahil ito ay paulit-ulit o sistematikong request.
+                    </p></div>
+                    <div class="wu-lppolicy__item"><p>(b) Ang burden o gastos ng pagsagot sa iyong request ay magiging hindi makatwiran para sa PROMOTER o hindi proporsyonal sa iyong mga interes.
+                    </p></div>
+                    <div class="wu-lppolicy__item"><p>(c) Ang iyong request ay para sa impormasyon na wala o hindi matatagpuan.
+                    </p></div>
+                    <div class="wu-lppolicy__item"><p>(d) Ang iyong request ay para sa impormasyon na trivial, o
+                    </p></div>
+                    <div class="wu-lppolicy__item"><p>Ang buong listahan ng mga eksepsiyon at pagkakataon ay makikita sa Ikalimang Iskedyul ng Personal Data Protection Act 2012 (tingnan ang Legislation Division ng Attorney General’s Chambers’ website sa Singapore Statutes Online <a href="">https://sso.agc.gov.sg/</a>).</p></div>
                     <div class="wu-lppolicy__linkhd"><a href="https://www.stratagile.com/privacy-policy/" target="_blank">WITHDRAWAL OF CONSENT NOTICE</a></div>
-                    <div class="wu-lppolicy__item"><p>You go to the web app profile section and uncheck your permission to grant PROMOTER the right to your information.</p></div>
-                    <div class="wu-lppolicy__item"><p>If you need to write to PROMOTER for any reason whatsoever, you can write to</p></div>
+                    <div class="wu-lppolicy__item"><p>Pumunta ka sa seksyon ng profile ng web app at i-uncheck ang iyong pahintulot na bigyan ang PROMOTER ng karapatan sa iyong impormasyon.
+                    </p></div>
+                    <div class="wu-lppolicy__item"><p>Kung kailangan mong magsulat sa PROMOTER para sa anumang dahilan, maaari kang magsulat sa
+                    </p></div>
                     <div class="wu-lppolicy__item blulnk"><p>Email address:&nbsp;&nbsp;&nbsp;<a href="mailto:dpo@stratagile.com">dpo@stratagile.com</a>.</p></div>
-                    <div class="wu-lppolicy__item"><p>Once we receive your notice that you wish to withdraw consent, we will contact you within seven days to acknowledge receipt of your withdrawal notice and within 30 days to inform you of the likely consequences of your withdrawal of your consent to the PROMOTER using and sharing your Personal Data.</p></div>
-                    <div class="wu-lppolicy__item"><p>The PROMOTER will cease to use and share your Personal Data within 30 days after our acknowledgement of receipt of your withdrawal notice.</p></div>
+                    <div class="wu-lppolicy__item"><p>Pagkatanggap namin ng iyong abiso na nais mong bawiin ang pahintulot, makikipag-ugnayan kami sa iyo sa loob ng pitong araw upang kilalanin ang pagtanggap ng iyong withdrawal notice at sa loob ng 30 araw upang ipaalam sa iyo ang mga posibleng epekto ng iyong pagbawi ng pahintulot sa paggamit at pagbabahagi ng iyong Personal Data ng PROMOTER.
+                    </p></div>
+                    <div class="wu-lppolicy__item"><p>Titigil ang PROMOTER sa paggamit at pagbabahagi ng iyong Personal Data sa loob ng 30 araw pagkatapos ng aming pagkilala sa pagtanggap ng iyong withdrawal notice.
+                    </p></div>
                 </div>
             </div>
         </div>
