--- a/organisms/lp-terms-ph-th.html
+++ b/organisms/lp-terms-ph-th.html
@@ -28,9 +28,11 @@
                     <div class="wu-lpterms__termitem"><span>2. </span><p>Ang Promoter ng Promosyon na ito ay ang Stratagile Pte Ltd (“Promoter”) na may address na PHRONG STRATAGILE CO., LTD, 149 MOO 4, KAELINE, KARTUMBAEN, SAMUTSAKHON 74110, THAILAND. Ang Phrong Stratagile Co., Ltd ang namamahala ng promosyon na ito para sa Western Union at ang Western Union ay hindi mananagot sa anumang aspeto ng promosyon. Ang programa ay ganap na pinamamahalaan ng Promoter.</p>
                     </div>
                     <!-- 3 -->
-                    <div class="wu-lpterms__termitem"><span>3. </span><p>Ang promo ay bukas sa mga residente ng Thailand na may edad 18 pataas na tumutugon sa mga requirements ng promo na nakasaad sa clause 5 sa ibaba (“Eligible Participants”).</p></div>
+                    <div class="wu-lpterms__termitem"><span>3. </span><p>Ang promo ay bukas sa mga residente ng Thailand na may edad 18 pataas na tumutugon sa mga requirements ng promo na nakasaad sa clause 5 sa ibaba (“Eligible Participants”).
+                    </p></div>
                     <!-- 4 -->
-                    <div class="wu-lpterms__termitem"><span>4. </span><p>Ang Promosyon ay magsisimula sa 12:00am (oras ng Bangkok) noong 15th Dec 2024 at magtatapos sa 11:59pm (oras ng Bangkok) noong 15th March 2025 (“Promotion Period”) at maaaring palawigin ng Promoter.</p></div>
+                    <div class="wu-lpterms__termitem"><span>4. </span><p>Ang Promosyon ay magsisimula sa 12:00am (oras ng Bangkok) noong 15th Dec 2024 at magtatapos sa 11:59pm (oras ng Bangkok) noong 15th March 2025 (“Promotion Period”) at maaaring palawigin ng Promoter.
+                    </p></div>
                     <!-- 5 -->
                     <div class="wu-lpterms__termitem"><span>5. </span><p>Paano sumali: Magrehistro online at pumili ng nais na premyo (pumili ng isang uri lamang). Magpadala ng Western Union® Money Transfer na hindi bababa sa 10,000 THB mula sa anumang Western Union agents/partners sa retail locations o mobile banking o Western Union branded digital (wu.com at Western Union mobile app) sa Thailand papuntang Pilipinas, USA, China, India, at Vietnam sa loob ng Promotion Period.</p></div>
                     <!-- 6 -->
