--- a/organisms/lp-terms-ph-th.html
+++ b/organisms/lp-terms-ph-th.html
@@ -34,7 +34,8 @@
                     <div class="wu-lpterms__termitem"><span>4. </span><p>Ang Promosyon ay magsisimula sa 12:00am (oras ng Bangkok) noong 15th Dec 2024 at magtatapos sa 11:59pm (oras ng Bangkok) noong 15th March 2025 (“Promotion Period”) at maaaring palawigin ng Promoter.
                     </p></div>
                     <!-- 5 -->
-                    <div class="wu-lpterms__termitem"><span>5. </span><p>Paano sumali: Magrehistro online at pumili ng nais na premyo (pumili ng isang uri lamang). Magpadala ng Western Union® Money Transfer na hindi bababa sa 10,000 THB mula sa anumang Western Union agents/partners sa retail locations o mobile banking o Western Union branded digital (wu.com at Western Union mobile app) sa Thailand papuntang Pilipinas, USA, China, India, at Vietnam sa loob ng Promotion Period.</p></div>
+                    <div class="wu-lpterms__termitem"><span>5. </span><p>Paano sumali: Magrehistro online at pumili ng nais na premyo (pumili ng isang uri lamang). Magpadala ng Western Union® Money Transfer na hindi bababa sa 10,000 THB mula sa anumang Western Union agents/partners sa retail locations o mobile banking o Western Union branded digital (wu.com at Western Union mobile app) sa Thailand papuntang Pilipinas, USA, China, India, at Vietnam sa loob ng Promotion Period.
+                    </p></div>
                     <!-- 6 -->
                     <div class="wu-lpterms__termitem"><span>6. </span><p>Mga Premyo: </p></div>
                     <!-- list a  -->
@@ -42,17 +43,20 @@
                         <ul>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">100 THB Grab Voucher:</span> Ang unang 800 na customer na makakakompleto ng isang qualifying transaction ay makakatanggap ng isang (1) 100 THB Grab voucher, na may isang panalo bawat customer.</p>
+                                    <p><span class="bld">100 THB Grab Voucher</span> Ang unang 800 na customer na makakakompleto ng isang qualifying transaction ay makakatanggap ng isang (1) 100 THB Grab voucher, na may isang panalo bawat customer.
+                                    </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">300 THB Grab Voucher:</span> Ang unang 800 na customer na makakakompleto ng dalawang qualifying transactions ay makakatanggap ng isang (1) 300 THB Grab voucher, na may isang panalo bawat customer.</p>
+                                    <p><span class="bld">300 THB Grab Voucher:</span> Ang unang 800 na customer na makakakompleto ng dalawang qualifying transactions ay makakatanggap ng isang (1) 300 THB Grab voucher, na may isang panalo bawat customer.
+                                    </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">Single prize:</span> Maaaring manalo ang mga customer ng alinman sa mga voucher na ito isang beses lamang.</p>
+                                    <p><span class="bld">Single prize:</span>Maaaring manalo ang mga customer ng alinman sa mga voucher na ito isang beses lamang.
+                                    </p>
                                 </div>
                             </li>
                         </ul>
@@ -62,7 +66,8 @@
                      <!-- list -->
                      <div class="wu-lpterms__termlistb">
                         <ul>
-                            <li class="wu-lpterms__termlistitmb">Pangalan (ayon sa ibinigay ng sender at nakasulat sa ID)</li>
+                            <li class="wu-lpterms__termlistitmb">(a) Pangalan (ayon sa ibinigay ng sender at nakasulat sa ID)
+                            </li>
                             <li class="wu-lpterms__termlistitmb">(b) Mobile Number</li>
                             <li class="wu-lpterms__termlistitmb">(c) Email Address</li>
                             <li class="wu-lpterms__termlistitmb">(e) Petsa ng transaction</li>
