--- a/organisms/lp-terms-th.html
+++ b/organisms/lp-terms-th.html
@@ -60,7 +60,7 @@
                      <!-- list -->
                      <div class="wu-lpterms__termlistb">
                         <ul>
-                            <li class="wu-lpterms__termlistitmb">Pangalan (ayon sa ibinigay ng sender at nakasulat sa ID)</li>
+                            <li class="wu-lpterms__termlistitmb">(a) Pangalan (ayon sa ibinigay ng sender at nakasulat sa ID)</li>
                             <li class="wu-lpterms__termlistitmb">(b) Mobile Number</li>
                             <li class="wu-lpterms__termlistitmb">(c) Email Address</li>
                             <li class="wu-lpterms__termlistitmb">(e) Petsa ng transaction</li>
