--- a/organisms/lp-terms-ph-th.html
+++ b/organisms/lp-terms-ph-th.html
@@ -76,13 +76,16 @@
                         </ul>
                     </div>
                      <!-- 8 -->
-                     <div class="wu-lpterms__termitem"><span>8. </span><p>Ang Promoter ay magtatagal ng mga sapat na hakbang upang panatilihing pribado ang data na ito at hindi ito ibabahagi sa anumang third party. Wala ni Western Union o Phrong Stratagile Co. Ltd ang makikipag-ugnayan sa customer para sa anumang dahilan maliban sa pag-aanunsyo ng mga premyo.</p>
+                     <div class="wu-lpterms__termitem"><span>8. </span><p>Ang Promoter ay magtatagal ng mga sapat na hakbang upang panatilihing pribado ang data na ito at hindi ito ibabahagi sa anumang third party. Wala ni Western Union o Phrong Stratagile Co. Ltd ang makikipag-ugnayan sa customer para sa anumang dahilan maliban sa pag-aanunsyo ng mga premyo.
+                    </p>
                     </div>
                      <!-- 9 -->
-                     <div class="wu-lpterms__termitem"><span>9. </span><p>Ang Promoter ang magiging responsable sa anumang mga usapin na magmumula o kaugnay ng mga premyo, serbisyo, at/o impormasyon na kanilang ibinibigay. Anumang inquiry o reklamo tungkol sa mga premyo, serbisyo, at/o impormasyon ay dapat ipadala sa Promoter.</p>
+                     <div class="wu-lpterms__termitem"><span>9. </span><p>Ang Promoter ang magiging responsable sa anumang mga usapin na magmumula o kaugnay ng mga premyo, serbisyo, at/o impormasyon na kanilang ibinibigay. Anumang inquiry o reklamo tungkol sa mga premyo, serbisyo, at/o impormasyon ay dapat ipadala sa Promoter.
+                    </p>
                     </div>
                      <!-- 10 -->
-                     <div class="wu-lpterms__termitem"><span>10. </span><p>Para makuha ang premyo(s):</p>
+                     <div class="wu-lpterms__termitem"><span>10. </span><p>Para makuha ang premyo(s):
+                    </p>
                     </div>
                      <!-- list-a -->
                      <div class="wu-lpterms__termlista">
@@ -94,42 +97,53 @@
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>800 winners na may 300 THB na halaga ng Grab voucher ay pipiliin ayon sa pagkakasunod-sunod ng petsa ng kanilang ikalawang transaction.</p>
+                                    <p>800 winners na may 300 THB na halaga ng Grab voucher ay pipiliin ayon sa pagkakasunod-sunod ng petsa ng kanilang ikalawang transaction.
+                                    </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>Ang mga winners ay aabisuhan sa pamamagitan ng tawag at nakarehistrong email na ibinigay sa registration form, at ang reward ay ipapadala sa pamamagitan ng SMS at email ng Promoter hindi lalampas ng 15th April 2025.</p>
+                                    <p>Ang mga winners ay aabisuhan sa pamamagitan ng tawag at nakarehistrong email na ibinigay sa registration form, at ang reward ay ipapadala sa pamamagitan ng SMS at email ng Promoter hindi lalampas ng 15th April 2025.
+                                    </p>
                                 </div>
                             </li>
                         </ul>
                      </div>
                       <!-- 11 -->
-                      <div class="wu-lpterms__termitem"><span>11. </span><p>Ang alok ay valid hangga’t may stocks at valid lamang sa loob ng Promotion Period. Ang mga premyo ay ibinibigay ng isang third-party provider, ayon sa kani-kanilang mga terms and conditions (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) ng product warranty, na kung saan ang Promoter ay walang pananagutan.</p>
+                      <div class="wu-lpterms__termitem"><span>11. </span><p>Ang alok ay valid hangga’t may stocks at valid lamang sa loob ng Promotion Period. Ang mga premyo ay ibinibigay ng isang third-party provider, ayon sa kani-kanilang mga terms and conditions (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) ng product warranty, na kung saan ang Promoter ay walang pananagutan.
+                      </p>
                     </div>
                      <!-- 12 -->
-                     <div class="wu-lpterms__termitem"><span>12. </span><p>Ang mga winners ay magiging responsable para sa anumang buwis na kaugnay ng pagkapanalo ng premyo. Ang mga premyo ay ibinibigay ng isang third party at sila ang magiging responsable sa anumang mga usapin na magmumula o kaugnay ng mga premyo, serbisyo, at/o impormasyon na kanilang ibinibigay, na kung saan ang Promoter ay walang pananagutan. Anumang inquiry o reklamo tungkol sa mga premyo, serbisyo, at/o impormasyon ay dapat ipadala sa third party. Ang Promoter ay hindi mananagot sa mga premyo na hindi umabot sa inaasahan ng winners at sa kalidad at availability ng mga premyo, serbisyo, at impormasyon na ibinibigay ng third-party provider, at iniiwasan ang pananagutan kaugnay ng Promosyon kapag ang winner(s) ay nakinabang na mula sa anumang benepisyo na may kinalaman sa Promosyon, sa buong lawak na pinapayagan ng batas.</p>
+                     <div class="wu-lpterms__termitem"><span>12. </span><p>Ang mga winners ay magiging responsable para sa anumang buwis na kaugnay ng pagkapanalo ng premyo. Ang mga premyo ay ibinibigay ng isang third party at sila ang magiging responsable sa anumang mga usapin na magmumula o kaugnay ng mga premyo, serbisyo, at/o impormasyon na kanilang ibinibigay, na kung saan ang Promoter ay walang pananagutan. Anumang inquiry o reklamo tungkol sa mga premyo, serbisyo, at/o impormasyon ay dapat ipadala sa third party. Ang Promoter ay hindi mananagot sa mga premyo na hindi umabot sa inaasahan ng winners at sa kalidad at availability ng mga premyo, serbisyo, at impormasyon na ibinibigay ng third-party provider, at iniiwasan ang pananagutan kaugnay ng Promosyon kapag ang winner(s) ay nakinabang na mula sa anumang benepisyo na may kinalaman sa Promosyon, sa buong lawak na pinapayagan ng batas.
+                    </p>
                     </div>
                      <!-- 13 -->
-                     <div class="wu-lpterms__termitem"><span>13. </span><p>Kung ang Promosyon na ito ay maistorbo sa anumang paraan o hindi maisasagawa tulad ng inaasahan dahil sa anumang dahilan na lampas sa makatarungang kontrol ng Promoter, kabilang ngunit hindi limitado sa mga teknikal na problema o pagkabigo, hindi awtorisadong panghihimasok o pandaraya, vandalismo, pagkawala ng kuryente, natural na kalamidad, mga aksyon ng Diyos, kaguluhan sa lipunan, welga, impeksyon ng computer virus, mga bug, panghihimasok, pandaraya, o anumang ibang dahilan na wala sa kontrol ng Promoter, na nakakasira o nakakaapekto sa administrasyon, seguridad, katarungan o integridad o wastong pagganap ng Promosyon na ito, ang Promoter ay may karapatang, ayon sa kanilang sariling pagpapasya, sa pinakamalawak na pinapayagan ng batas: (a) i-disqualify ang anumang Eligible Participant; o (b) alinsunod sa anumang nakasulat na direksyon mula sa isang regulatory authority, baguhin, ipagpaliban, tapusin o kanselahin ang Promosyon, ayon sa nararapat upang maisakatuparan hangga’t maaari ang orihinal na layunin ng Promosyon na ito.</p>
+                     <div class="wu-lpterms__termitem"><span>13. </span><p>Kung ang Promosyon na ito ay maistorbo sa anumang paraan o hindi maisasagawa tulad ng inaasahan dahil sa anumang dahilan na lampas sa makatarungang kontrol ng Promoter, kabilang ngunit hindi limitado sa mga teknikal na problema o pagkabigo, hindi awtorisadong panghihimasok o pandaraya, vandalismo, pagkawala ng kuryente, natural na kalamidad, mga aksyon ng Diyos, kaguluhan sa lipunan, welga, impeksyon ng computer virus, mga bug, panghihimasok, pandaraya, o anumang ibang dahilan na wala sa kontrol ng Promoter, na nakakasira o nakakaapekto sa administrasyon, seguridad, katarungan o integridad o wastong pagganap ng Promosyon na ito, ang Promoter ay may karapatang, ayon sa kanilang sariling pagpapasya, sa pinakamalawak na pinapayagan ng batas: (a) i-disqualify ang anumang Eligible Participant; o (b) alinsunod sa anumang nakasulat na direksyon mula sa isang regulatory authority, baguhin, ipagpaliban, tapusin o kanselahin ang Promosyon, ayon sa nararapat upang maisakatuparan hangga’t maaari ang orihinal na layunin ng Promosyon na ito.
+                    </p>
                     </div>
                     <!-- 14 -->
-                    <div class="wu-lpterms__termitem"><span>14. </span><p>Alinsunod sa anumang naaangkop na batas na hindi maaaring ibukod, ang Promoter at ang mga kaugnay na kumpanya at mga ahente na kaakibat ng Promosyon na ito ay hindi mananagot para sa anumang pagkawala, pinsala, o sugat na naranasan o natamo ng sinuman (kabilang na, ngunit hindi limitado sa, direktang o hindi direktang pagkawala, consequential na pagkawala o pagkawala na dulot ng kapabayaan) na nagmumula direkta o hindi direkta mula o kaugnay ng Promosyon na ito o anumang premyo na ibinibigay bilang bahagi ng Promosyon na ito.</p>
+                    <div class="wu-lpterms__termitem"><span>14. </span><p>Alinsunod sa anumang naaangkop na batas na hindi maaaring ibukod, ang Promoter at ang mga kaugnay na kumpanya at mga ahente na kaakibat ng Promosyon na ito ay hindi mananagot para sa anumang pagkawala, pinsala, o sugat na naranasan o natamo ng sinuman (kabilang na, ngunit hindi limitado sa, direktang o hindi direktang pagkawala, consequential na pagkawala o pagkawala na dulot ng kapabayaan) na nagmumula direkta o hindi direkta mula o kaugnay ng Promosyon na ito o anumang premyo na ibinibigay bilang bahagi ng Promosyon na ito.
+                    </p>
                     </div>
                     <!-- 15 -->
-                    <div class="wu-lpterms__termitem"><span>15. </span><p>Sa hangganan na mayroong anumang hindi pagkakatugma sa pagitan ng mga terms and conditions na ito at ibang marketing materials o collateral na ginawa kaugnay ng Promosyon na ito, ang mga terms and conditions na ito ang mananaig.</p>
+                    <div class="wu-lpterms__termitem"><span>15. </span><p>Sa hangganan na mayroong anumang hindi pagkakatugma sa pagitan ng mga terms and conditions na ito at ibang marketing materials o collateral na ginawa kaugnay ng Promosyon na ito, ang mga terms and conditions na ito ang mananaig.
+                    </p>
                     </div> 
                     <!-- 16 -->
-                    <div class="wu-lpterms__termitem"><span>16. </span><p>Para sa karagdagang paglilinaw at reklamo, maaari kayong makipag-ugnayan sa Stratagile Pte Ltd (“Promoter”) sa: xxxxxxxxx (Local support contact number)</p>
+                    <div class="wu-lpterms__termitem"><span>16. </span><p>Para sa karagdagang paglilinaw at reklamo, maaari kayong makipag-ugnayan sa Stratagile Pte Ltd (“Promoter”) sa: xxxxxxxxx (Local support contact number)
+                    </p>
                     </div>
                     <!-- 17 -->
-                    <div class="wu-lpterms__termitem"><span>17. </span><p>Ang pagtanggap ng anumang premyo, benepisyo, at/o alok na ibinigay ng Promoter ay ituturing bilang pahintulot ng winner(s) na makilahok sa anumang kaugnay na publicity at gamitin ang kanilang pangalan, itsura, imahe, at/o boses para sa advertising at iba pang promotional na layunin nang walang kabayaran, maliban kung ipinagbabawal ng anumang naaangkop na batas.</p>
+                    <div class="wu-lpterms__termitem"><span>17. </span><p>Ang pagtanggap ng anumang premyo, benepisyo, at/o alok na ibinigay ng Promoter ay ituturing bilang pahintulot ng winner(s) na makilahok sa anumang kaugnay na publicity at gamitin ang kanilang pangalan, itsura, imahe, at/o boses para sa advertising at iba pang promotional na layunin nang walang kabayaran, maliban kung ipinagbabawal ng anumang naaangkop na batas.
+                    </p>
                     </div>
                      <!-- 18 -->
-                     <div class="wu-lpterms__termitem"><span>18. </span><p>Itatago ng Stratagle ang mga detalye sa isang secure na database (AWS hosted). Ang customer data ay hindi gagamitin para sa anumang layunin maliban sa pagpili ng winner at hindi ito ibabahagi. Kung ang customer ay mag-o-opt out, permanenteng ide-delete ang rekord nang walang kasaysayan. Ang Western Union ay magkakaroon lamang ng visibility ng data para sa layunin ng verification ng transaction at hindi ito mag-iimbak ng anumang kopya. Ide-delete namin ang data sa pagtatapos ng pilot period. Magpo-post kami ng detalyadong online privacy statement at Terms and Conditions na naka-attach sa link.</p>
+                     <div class="wu-lpterms__termitem"><span>18. </span><p>Itatago ng Stratagle ang mga detalye sa isang secure na database (AWS hosted). Ang customer data ay hindi gagamitin para sa anumang layunin maliban sa pagpili ng winner at hindi ito ibabahagi. Kung ang customer ay mag-o-opt out, permanenteng ide-delete ang rekord nang walang kasaysayan. Ang Western Union ay magkakaroon lamang ng visibility ng data para sa layunin ng verification ng transaction at hindi ito mag-iimbak ng anumang kopya. Ide-delete namin ang data sa pagtatapos ng pilot period. Magpo-post kami ng detalyadong online privacy statement at Terms and Conditions na naka-attach sa link.
+                    </p>
                     </div>
                      <!-- 19 -->
-                     <div class="wu-lpterms__termitem"><span>19. </span><p>Ang promosyon ay sumusunod sa lahat ng naaangkop na batas at regulasyon laban sa suhol at korapsyon.</p>
+                     <div class="wu-lpterms__termitem"><span>19. </span><p>Ang promosyon ay sumusunod sa lahat ng naaangkop na batas at regulasyon laban sa suhol at korapsyon.
+                    </p>
                     </div>
                 </div>
             </div>
